# opengl_terra

./: CMakeLists.txt  Executavel.bat  LICENSE  Matrices.cpp  README.md  Vectors.cpp  main.cpp  main_praticamente_sem_comentarios.cpp
planeta_terra/: CMakeLists.txt  main.cpp
shaders/: triangle_frag.glsl  triangle_vert.glsl
